--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "prettier-plugin-astro": "0.12.0",
     "prettier-plugin-tailwindcss": "0.5.3",
     "tailwindcss": "3.3.3"
+  },
+  "engines": {
+   } "node": "18.x"
   }
-}
+  
